--- a/public/CSS/modules.css
+++ b/public/CSS/modules.css
@@ -1,7 +1,7 @@
 /* How things should look *//* Basic */
 
 body {
-  background: #fff;
+  background: #EAD4E1;
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 19pt;
   font-weight: 300;
@@ -17,7 +17,7 @@ input, textarea, select {
 }
 h1, h2, h3, h4, h5, h6 {
   font-weight: 300;
-  color: #666;
+  color: #1D1E2C;
   line-height: 1.5em;
 }
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -25,7 +25,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
   text-decoration: none;
 }
 h1 a strong, h2 a strong, h3 a strong, h4 a strong, h5 a strong, h6 a strong {
-  color: #333;
+  color: #1D1E2C;
 }
 h2 {
   font-size: 2em;
